src/objects/AMS_OSCAR_Event__c.object
<CustomObject>
    <description>Object used to store all the actions for all the steps related to a Lifecycle Request (OSCAR). When a user or a process change a predefined set of fields, it creates an OSCAR Event, with previous value, actual value, user who made the change and its date. This is custom history tracking process. The set of fields that trigger this Oscar Event are defined on a custom setting (AMS_OSCAR_HistoryFields__c)</description>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Represents the status of actions: &quot;N\a&quot;, &quot;Not Ok&quot;, &quot;Ok&quot;</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Not Ok</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New value of field</description>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OSCAR__c</fullName>
        <description>Related OSCAR</description>
        <label>OSCAR</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>AMS OSCAR Events</relationshipLabel>
        <relationshipName>AMS_OSCAR_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>Old value of field</description>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Step__c</fullName>
        <description>Represents a set of steps available with the field: &quot;B1&quot;, &quot;B2&quot;, &quot;B3.A&quot;, &quot;B3.B&quot;, &quot;B3.C&quot;, &quot;B3.D&quot;, &quot;B4&quot;, &quot;E1&quot;, &quot;E2&quot;, &quot;G1&quot;</description>
        <label>Related Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3.A</fullName>
                </value>
                <value>
                    <fullName>B3.B</fullName>
                </value>
                <value>
                    <fullName>B3.C</fullName>
                </value>
                <value>
                    <fullName>B3.D</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AMS OSCAR Event</label>
    <nameField>
        <displayFormat>OE-{00000}</displayFormat>
        <label>OSCAR Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS OSCAR Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>